<resources>
    <string name="app_name">Safety Drunk Driver</string>
    <string name="str_overall">Overall</string>
    <string name="str_history">History</string>
    <string name="str_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_username">username</string>
    <string name="this_pic">this_pic</string>
    <string name="str_emercy">Emergency Phone Number : </string>
    <string name="str_update">Update</string>
    <string name="str_noinfo">No Information</string>
    <string name="str_device">Device ID : </string>
    <string name="str_alert">Alarm when alcohol is high</string>
    <string name="str_emercall">Emergency call when alcohol is high</string>
    <string name="register" />
    <string name="registertxt">Register</string>
    <string name="name">Name :</string>
    <string name="boardid">Board ID :</string>
    <string name="detail" />
    <string name="info">Please fill information below</string>
    <string name="month">Monthly Static</string>
    <string name="good"><![CDATA[<30]]></string>
    <string name="warn"><![CDATA[<50]]></string>
    <string name="bad"><![CDATA[>5]]></string>
    <string name="badd"><![CDATA[>50]]></string>
    <string name="str_signout">Sign Out</string>
</resources>
